--- a/app/src/main/res/layout/fragment_sig_in.xml
+++ b/app/src/main/res/layout/fragment_sig_in.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    tools:context=".LogInUpFragments.SigInFragment">
+    tools:context=".loginupfragments.SigInFragment">
 
     <ImageView
         android:id="@+id/cancel"
