--- a/app/src/main/res/layout/fragment_sig_in_forget_password.xml
+++ b/app/src/main/res/layout/fragment_sig_in_forget_password.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    tools:context=".LogInUpFragments.SigInForgetPasswordFragment">
+    tools:context=".loginupfragments.SigInForgetPasswordFragment">
 
     <ImageView
         android:id="@+id/twitterLogo"
