--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/logInFragment"
-        android:name="com.bhdr.twitterclone.LogInUpFragments.LogInFragment"
+        android:name="com.bhdr.twitterclone.loginupfragments.LogInFragment"
         android:label="fragment_log_in"
         tools:layout="@layout/fragment_log_in" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.bhdr.twitterclone.LogInUpFragments.SignUpFragment"
+        android:name="com.bhdr.twitterclone.loginupfragments.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/sigInFragment"
-        android:name="com.bhdr.twitterclone.LogInUpFragments.SigInFragment"
+        android:name="com.bhdr.twitterclone.loginupfragments.SigInFragment"
         android:label="fragment_sig_in"
         tools:layout="@layout/fragment_sig_in" />
 </navigation>
