--- a/app/src/main/res/layout/fragment_sig_in.xml
+++ b/app/src/main/res/layout/fragment_sig_in.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    tools:context=".loginupfragments.SigInFragment">
+    tools:context=".loginupfragments.SignInFragment">
 
     <ImageView
         android:id="@+id/cancel"
@@ -50,6 +50,7 @@
         android:hint="Telefon numarası, e-posta veya kullanıcı adı"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:maxLength="15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />
@@ -68,7 +69,7 @@
         android:id="@+id/forgetPasswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> signInFragmentObject.forgetPasswordText()}"
+
         android:text="Şifreni mi unuttun?"
         android:textColor="#03A9F4"
         app:layout_constraintBottom_toBottomOf="@+id/nextButton"
@@ -81,7 +82,6 @@
         android:layout_height="48dp"
         android:backgroundTint="#03A9F4"
         android:fontFamily="@font/roboto"
-        android:onClick="@{() -> signInFragmentObject.nextButton(emailphonenicknameEditText.getText().toString())}"
         android:text="İleri"
         android:textSize="12sp"
         app:cornerRadius="100dp"
