--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -6,7 +6,7 @@
     android:paddingStart="30dp"
     android:paddingEnd="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".loginupfragments.LogInFragment">
+    tools:context=".fragments.loginupfragments.LogInFragment">
 
     <ImageView
         android:id="@+id/twitterLogo"
