--- a/app/src/main/res/layout/fragment_sign_in_forget_password_second.xml
+++ b/app/src/main/res/layout/fragment_sign_in_forget_password_second.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    tools:context=".loginupfragments.SignInForgetPasswordSecondFragment">
+    tools:context=".fragments.loginupfragments.SignInForgetPasswordSecondFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/InputLayout"
