--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_logInFragment_to_sigInFragment"
             app:destination="@id/sigInFragment" />
+        <action
+            android:id="@+id/xml2"
+            app:destination="@id/main_nav.xml" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -79,9 +82,6 @@
             android:name="userId"
             app:argType="integer" />
     </fragment>
-    <include app:graph="@navigation/main_nav">
-        <argument
-            android:name="userId"
-            app:argType="integer" />
-    </include>
+    <include app:graph="@navigation/main_nav"/>
+
 </navigation>
