--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -24,4 +24,9 @@
             android:name="userName"
             app:argType="string" />
     </dialog>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.bhdr.twitterclone.fragments.mainfragments.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
