--- a/app/src/main/res/layout/agenda_card.xml
+++ b/app/src/main/res/layout/agenda_card.xml
@@ -31,7 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@{agendaObject.category}"
+
                 android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@id/tweetMenuText2"
@@ -43,9 +43,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@{agendaObject.hashtag}"
-                android:textColor="#000000"
+                android:textColor="@color/menu_textColor"
                 android:textSize="16sp"
+
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@id/tweetMenuText2"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -57,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@{agendaObject.tweetnumber}"
+         android:text="9.155"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@id/tweetMenuText2"
                 app:layout_constraintHorizontal_bias="0.0"
