--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,8 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F1F1F1">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -97,37 +96,37 @@
                 android:id="@+id/topContentImage"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
-
-                app:lottie_autoPlay="true"
-               app:lottie_rawRes="@raw/hello_naruto"
+                android:background="#FFFFFF"
+                android:scaleType="centerInside"
+                android:translationZ="-90dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-               />
+                app:lottie_autoPlay="true"
+                app:lottie_rawRes="@raw/hello_android" />
 
             <TextView
                 android:id="@+id/topContentSubjectText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-
+                android:layout_marginBottom="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/menu_textColor"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/topContentContentText"
                 app:layout_constraintStart_toStartOf="@id/topContentImage" />
 
             <TextView
                 android:id="@+id/topContentContentText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="24dp"
-
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textColor="#FFFFFF"
+                android:textColor="#808080"
                 android:textSize="20sp"
+                android:textStyle="bold"
+                android:translationZ="90dp"
                 app:layout_constraintBottom_toBottomOf="@id/topContentImage"
                 app:layout_constraintStart_toStartOf="@id/topContentImage" />
 
@@ -280,20 +279,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottiAnim"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            app:lottie_autoPlay="true"
-            android:visibility="gone"
-            app:lottie_loop="true"
             android:backgroundTint="@color/white"
-            app:lottie_rawRes="@raw/twitter_loading"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/twitter_loading" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addTweetFAB"
