--- a/app/src/main/res/layout/fragment_sign_in_forget_password_second.xml
+++ b/app/src/main/res/layout/fragment_sign_in_forget_password_second.xml
@@ -30,7 +30,19 @@
             android:maxLength="15"
             android:hint="Şifre" />
     </com.google.android.material.textfield.TextInputLayout>
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottiAnim"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:backgroundTint="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/twitter_loading" />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/InputLayout2"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
