--- a/app/src/main/res/layout/fragment_sig_in_forget_password.xml
+++ b/app/src/main/res/layout/fragment_sig_in_forget_password.xml
@@ -7,7 +7,19 @@
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
     tools:context=".fragments.loginupfragments.SignInForgetPasswordFragment">
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottiAnim"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:backgroundTint="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/twitter_loading" />
     <ImageView
         android:id="@+id/twitterLogo"
         android:layout_width="match_parent"
