--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -92,28 +92,27 @@
             android:layout_height="match_parent"
             tools:context=".fragments.SearchFragment">
 
-            <com.airbnb.lottie.LottieAnimationView
+            <ImageView
                 android:id="@+id/topContentImage"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:background="#FFFFFF"
-                android:scaleType="centerInside"
-                android:translationZ="-90dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/gecepazari"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:lottie_autoPlay="true"
-                app:lottie_rawRes="@raw/hello_android" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/topContentSubjectText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="14dp"
                 android:layout_marginBottom="8dp"
+                android:shadowColor="@color/white"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/menu_textColor"
-                android:textSize="16sp"
+                android:textColor="@color/mainBlue"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/topContentContentText"
                 app:layout_constraintStart_toStartOf="@id/topContentImage" />
 
@@ -121,9 +120,9 @@
                 android:id="@+id/topContentContentText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="24dp"
-                android:textColor="#808080"
+                android:layout_marginStart="14dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:translationZ="90dp"
