--- a/app/src/main/res/layout/tweet_card.xml
+++ b/app/src/main/res/layout/tweet_card.xml
@@ -64,10 +64,11 @@
         android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:maxLength="10"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/tweetText"
