--- a/app/src/main/res/layout/tweet_card.xml
+++ b/app/src/main/res/layout/tweet_card.xml
@@ -78,6 +78,9 @@
         android:layout_marginTop="4dp"
         android:textColor="#000000"
         android:textSize="16sp"
+        android:autoLink="web"
+        android:linksClickable="true"
+        android:textColorLink="@color/linkColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
