--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="menu_tint">#03A9F4</color>
     <color name="menu_textColor">#03A9F4</color>
      <color name="mainBlue">#1D9BF0</color>
+     <color name="linkColor">#0669AC</color>
 
 </resources>
